--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
 		"nodemon": "^1.19.1"
 	},
 	"dependencies": {
+		"bcrypt-nodejs": "0.0.3",
 		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.0.0",
